--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie
       username: root
       password: root
+  redis:
+    host: 192.168.10.3
+    port: 6379
+    password: root@123456
+    database: 0
 mybatis-plus:
   configuration:
 #    在数据库和实体类进行映射的时候，去掉数据库中的下划线或者字段中的下划线，按照驼峰命名法进行匹配
