--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
     </dependencies>
 <build>
     <plugins>
