--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
     port: 6379
     password:
     database: 0
+#  cache:
+#    redis:
+#      time-to-live: 1800000 #设置缓存数据的过期时间不写的话默认永久生效
 mybatis-plus:
   configuration:
 #    在数据库和实体类进行映射的时候，去掉数据库中的下划线或者字段中的下划线，按照驼峰命名法进行匹配
