--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,17 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/reggie
+#      本地数据库
+#      url: jdbc:mysql://localhost:3306/reggie
+#      云服务数据库
+      url: jdbc:mysql://124.222.221.77:3306/reggie
       username: root
-      password: root
+      password: MXMPbrxyc4t7sBje
   redis:
-    host: 127.0.0.1
+#    redis本地主机ip
+#    host: 127.0.0.1
+#    redis云服务ip
+    host: 124.222.221.77
     port: 6379
     password:
     database: 0
@@ -28,4 +34,11 @@ mybatis-plus:
     db-config:
       id-type: assign_id
 ruiji:
-  path: D:\img\
+#  图片本地存储位置
+#  path: D:\img\
+#  图片云服务器存储位置
+  path: /www/server/img
+
+
+
+#除了这些配置文件还有dishcontroller中的http://路径要改一下
