--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,16 +11,16 @@ spring:
 #      云服务数据库
       url: jdbc:mysql://124.222.221.77:3306/reggie
       username: root
-#      password: root
+#      password:
       password: MXMPbrxyc4t7sBje
   redis:
 #    redis本地主机ip
-#    host: 127.0.0.1
+    host: 127.0.0.1
 #    redis云服务ip
-    host: 124.222.221.77
+#    host: 124.222.221.77
     port: 6379
-#    password:
-    password: MXMPbrxyc4t7sBje
+    password:
+#    password: MXMPbrxyc4t7sBje
     database: 0
 #  cache:
 #    redis:
