瑞吉外卖-匿名群聊-企业邮箱提醒

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>1.6.7</version>
+        </dependency>
+
     </dependencies>
 <build>
     <plugins>
