瑞吉外卖-匿名群聊-发图片基础版

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!--企业微信发邮件-->
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
