--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <version>1.6.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.97</version>
+        </dependency>
+
     </dependencies>
 <build>
     <plugins>
