瑞吉外卖-匿名群聊-get在浏览器请求可以下载，但是代码中调用不能下载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,11 @@ ruiji:
 #  聊天图片云存储路径
   path2: /www/server/img2/
 
+  #  面试测试excel路径
+  path3: D:\img2\ceshi.xlsx
+  #  面试测试excel云路径
+#  path3: /www/server/ceshi.xlsx
+
 #企业邮箱发邮件
 mail:
   transport:
