--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,19 @@
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.18</version> <!-- 使用最新版本 -->
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version> <!-- 使用sha1加密 -->
+        </dependency>
+
+
 
         <!--springboot的2.4.5版本对应redis版本不支持使用redis的geo，所以这里引入-->
         <!--两个条件：1.redis服务器版本大于3.2-->
