录音测试成功

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dadiyang</groupId>
+            <artifactId>jave</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
 <build>
     <plugins>
