--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -35,14 +35,17 @@ wxpay.mch-serial-no=727CBEEF917780E73EB67417EB00952214551580
 wxpay.private-key-path=apiclient_key1.pem
 # APIv3密钥
 wxpay.api-v3-key=t41SmNRAvNYbZtu1IgqcjLCwhLetxdhs
-# APPID
+# APPID-千小夜公众号
 wxpay.appid=wx61c514e5d83894bf
+#APPID-千小夜小程序
+wxpay.appid1=wx902a8a53a4554f9a
 # 微信服务器地址
 wxpay.domain=https://api.mch.weixin.qq.com
 # 接收结果通知地址
 # 注意：每次重新启动ngrok，都需要根据实际情况修改这个配置
 #wxpay.notify-domain=https://3474-111-19-92-228.ngrok.io
-wxpay.notify-domain=https://qianyekeji.cn
+#wxpay.notify-domain=https://qianyekeji.cn
+wxpay.notify-domain=https://ad85-124-89-115-194.ngrok-free.app
 
 # APIv2密钥
 wxpay.partnerKey: 2ubEf2hRoHw4qNM3zmQz5Dgnz6nzCa24
