支付通知改进

--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -45,7 +45,7 @@ wxpay.domain=https://api.mch.weixin.qq.com
 # 注意：每次重新启动ngrok，都需要根据实际情况修改这个配置
 #wxpay.notify-domain=https://3474-111-19-92-228.ngrok.io
 #wxpay.notify-domain=https://qianyekeji.cn
-wxpay.notify-domain=https://ad85-124-89-115-194.ngrok-free.app
+wxpay.notify-domain=https://a2e4-123-139-254-213.ngrok-free.app
 
 # APIv2密钥
 wxpay.partnerKey: 2ubEf2hRoHw4qNM3zmQz5Dgnz6nzCa24
