--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,13 @@
             <version>0.3.0</version>
         </dependency>
 
+        <!--七牛云存储图片-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>[7.7.0, 7.7.99]</version>
+        </dependency>
+
         <!-- 自定义springboot配置文件无法点击前缀跳转
          1.先把对应的配置文件加入spring管理（不会加入的话看自己记录的微信支付的md文档）
          2.加底下这个坐标-->
