--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -44,8 +44,8 @@ wxpay.domain=https://api.mch.weixin.qq.com
 # 接收结果通知地址
 # 注意：每次重新启动ngrok，都需要根据实际情况修改这个配置
 #wxpay.notify-domain=https://3474-111-19-92-228.ngrok.io
-#wxpay.notify-domain=https://qianyekeji.cn
-wxpay.notify-domain=https://dc15-113-200-179-71.ngrok-free.app
+wxpay.notify-domain=https://qianyekeji.cn
+#wxpay.notify-domain=https://dc15-113-200-179-71.ngrok-free.app
 
 # APIv2密钥
 wxpay.partnerKey: 2ubEf2hRoHw4qNM3zmQz5Dgnz6nzCa24
