--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,14 @@
             <version>[7.7.0, 7.7.99]</version>
         </dependency>
 
+        <!--获取wav格式音频时长-->
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+
         <!-- 自定义springboot配置文件无法点击前缀跳转
          1.先把对应的配置文件加入spring管理（不会加入的话看自己记录的微信支付的md文档）
          2.加底下这个坐标-->
