--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <repositories>
+        <repository>
+            <id>github-mzdluo123-silk4j</id>
+            <url>https://aqpmzngldh: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@maven.pkg.github.com/mzdluo123/silk4j</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -190,6 +205,18 @@
             <artifactId>jaudiotagger</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+
+
+
+            <dependency>
+                <groupId>io.github.mzdluo123</groupId>
+                <artifactId>silk4j</artifactId>
+                <version>1.2-dev</version>
+            </dependency>
+
+
+
 
 
         <!-- 自定义springboot配置文件无法点击前缀跳转
