--- a/pom.xml
+++ b/pom.xml
@@ -206,10 +206,28 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!--爬取csdn中极客日报发的it新闻-->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome-fetcher</artifactId>
+            <version>1.15.0</version>
+        </dependency>
 
 
 
-            <dependency>
+        <dependency>
                 <groupId>io.github.mzdluo123</groupId>
                 <artifactId>silk4j</artifactId>
                 <version>1.2-dev</version>
