--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,20 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <!-- Chrome 浏览器驱动程序 -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+
+
 
         <dependency>
                 <groupId>io.github.mzdluo123</groupId>
