--- a/pom.xml
+++ b/pom.xml
@@ -234,22 +234,10 @@
 
 
 
-
-
         <dependency>
-                <groupId>io.github.mzdluo123</groupId>
-                <artifactId>silk4j</artifactId>
-                <version>1.2-dev</version>
-            </dependency>
-
-
-        <dependency>
-            <groupId>com.googlecode.soundlibs</groupId>
-            <artifactId>tritonus-share</artifactId>
-            <version>0.3.7.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-
-
 
 
 
