--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,7 @@ mybatis-plus:
 wecahtsdk:
   #  群机器人名字，建议跟自己微信昵称保持一致，方便@直接使用
   name: 咸王
+#  写入自己的gpt的sk
+  OPENAI_API_KEY: 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
+#  这个不必更改，反向代理直接调用gpt接口
+  OPENAI_API_URL: https://ls.zhao9wan6.work/proxy/api.openai.com/v1/chat/completions
